# hypr-hud-frame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hyprpm.toml
src/: HudAnimationState.cpp  HudAnimationState.hpp  HudConfig.cpp  HudConfig.hpp  HudFrameDecoration.cpp  HudFrameDecoration.hpp  HudFramePassElement.cpp  HudFramePassElement.hpp  Shaders.hpp  main.cpp
